--- a/cubey3/cubey3.vcxproj.filters
+++ b/cubey3/cubey3.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="include\Service\ServiceLocator.h">
       <Filter>Header Files\Service</Filter>
     </ClInclude>
+    <ClInclude Include="include\Service\ISystemService.h">
+      <Filter>Header Files\Service</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\cubey3.cpp">
